--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -29,7 +29,7 @@
 
 
 /* 1. Theme default css */
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Be+Vietnam+Pro:ital,wght@0,400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Be+Vietnam+Pro:wght@0,400;500;700&display=swap');
 
 :root {
 	--color1: #777777;
@@ -5815,4 +5815,11 @@ body.search-visible {
 }
 .btn {
 	text-transform: uppercase;
+}
+.section-title .title {
+	color: #FFFFFF;
+}
+footer .testi-avatar-img img {
+	max-width: inherit;
+	border-radius: 8px;
 }
