--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -6087,3 +6087,7 @@ body.search-visible {
 .formula-img {
 	margin-right: unset;
 }
+.features-products-wrap:nth-child(even) .features-products-thumb .shape-img {
+	bottom: 13px;
+	right: -110px;
+}
