--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -6084,6 +6084,17 @@ body.search-visible {
 	max-width: 100%;
 	border-radius: 8px;
 }
+.testimonial-bg-footer::after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: -9px;
+    background-image: url(../images/testimonial_bottom_shape.png);
+    width: 100%;
+    height: 37px;
+    background-repeat: repeat;
+    background-position: center;
+}
 .formula-img {
 	margin-right: unset;
 }
