--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -3382,7 +3382,7 @@ body.search-visible {
 	padding: 145px 0 150px;
 	z-index: 1;
 }
-.testimonial-bg::before, .testimonial-bg-footer::before {
+.testimonial-bg::before {
 	content: "";
 	position: absolute;
 	left: 0px;
@@ -3392,11 +3392,6 @@ body.search-visible {
 	height: 33px;
 	background-repeat: repeat;
 	background-position: center;
-}
-.testimonial-bg-footer::before {
-    top: 0px;
-	background-image: url("../images/footer_top_mask.png");
-	height: 100px;
 }
 .testimonial-bg::after {
 	content: "";
@@ -6084,12 +6079,23 @@ body.search-visible {
 	max-width: 100%;
 	border-radius: 8px;
 }
+.testimonial-bg::before, .testimonial-bg-footer::before {
+	content: "";
+	position: absolute;
+	left: 0px;
+    top: 0px;
+	background-image: url("../images/footer_top_mask.png");
+	width: 100%;
+	height: 100px;
+	background-repeat: repeat;
+	background-position: center;
+}
 .testimonial-bg-reviews::after {
     content: "";
     position: absolute;
     left: 0px;
     bottom: -9px;
-    background-image: url(../images/testimonial_bottom_shape.png);
+    background-image: url(../images/banner_bg_shape.png);
     width: 100%;
     height: 37px;
     background-repeat: repeat;
