--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -6079,10 +6079,10 @@ body.search-visible {
 	padding: 145px 0 150px;
 	z-index: 1;
 }
-.testimonial-bg-footer .section-title .title {
+.testimonial-bg-footer .section-title .title, .testimonial-bg-reviews .section-title .title {
 	color: #FFFFFF;
 }
-.testimonial-bg-footer .testi-avatar-img img {
+.testimonial-bg-footer .testi-avatar-img img, .testimonial-bg-reviews .testi-avatar-img img {
 	max-width: 100%;
 	border-radius: 8px;
 }
