--- a/landing.001/css/style.css
+++ b/landing.001/css/style.css
@@ -6104,9 +6104,12 @@ body.search-visible {
     bottom: -9px;
     background-image: url(../images/banner_bg_shape.png);
     width: 100%;
-    height: 37px;
+    height: 180px;
     background-repeat: repeat;
     background-position: center;
+}
+.testimonial-bg-reviews .footer-shape {
+	z-index: 3;
 }
 .formula-img {
 	margin-right: unset;
